# flutter_recorder

./: .gitmodules  BUILD_LITERT.md  BUILD_TFLITE.md  PLAN_STFT_AEC.md  README.md
android/: build.gradle
ios/: flutter_recorder.podspec
ios/Classes/: flutter_recorder.mm
lib/: flutter_recorder.dart
lib/src/: audio_data_container.dart  enums.dart  flutter_recorder.dart
lib/src/bindings/: flutter_recorder_bindings_generated.dart  recorder.dart  recorder_io.dart  recorder_web.dart
lib/src/filters/: filters.dart
linux/: CMakeLists.txt
macos/: flutter_recorder.podspec
macos/Classes/: flutter_recorder.mm
prebuilt/include/litert/python/tools/model_utils/dialect/tfl/: _cast.py
scripts/: build_litert.sh  build_litert_android.sh  build_litert_docker.sh  build_litert_linux.sh  build_litert_macos.sh  build_tflite_desktop.sh
src/: CMakeLists.txt  audio_perf_monitor.h  capture.cpp  capture.h  common.h  enums.h  flutter_recorder.cpp  flutter_recorder.h  miniaudio.h  native_ring_buffer.cpp  native_ring_buffer.h  native_scheduler.cpp  native_scheduler.h  playback_ready_buffer.cpp  playback_ready_buffer.h  soloud_slave_bridge.cpp  soloud_slave_bridge.h  tflite_stubs.cpp
src/filters/: filters.cpp  filters.h
src/filters/aec/: adaptive_echo_cancellation.cpp  adaptive_echo_cancellation.h  aec_test.cpp  aec_test.h  calibration.cpp  calibration.h  delay_estimator.cpp  delay_estimator.h  neural_post_filter.cpp  neural_post_filter.h  nlms_filter.h  reference_buffer.cpp  reference_buffer.h  vss_nlms_filter.cpp  vss_nlms_filter.h
src/stubs/: signpost_profiler_stub.cpp
windows/: CMakeLists.txt
